# latest-uploads-api

./: .env.example  Cargo.toml  Dockerfile  README.md
src/: index.html  main.rs
src/web/: index.html  site.js
