[package]
name = "server"
version = "1.3.1"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12.23", features = ["json"] }
dotenv = "0.15.0"
actix-cors = "0.7.1"
lazy_static = "1.5.0"
utoipa = "5.4.0"
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
